# musixmatch-freeAPI

./: .gitignore  LICENSE  README.md
python/: example.py  pyproject.toml
python/musixmatch_richsync/: __init__.py  client.py
typescript/: example.ts  package.json  tsconfig.json
typescript/src/: index.ts
